--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,9 @@
-netbeans (10.0-0) UNRELEASED; urgency=medium
+netbeans (10.0-1) UNRELEASED; urgency=medium
   [ vitex ]
   * Install stable netbeans 10
 
- -- Vitex <vitex@hebeditko>  Mon, 05 Nov 2018 23:54:33 +0100
+  [ Vítězslav Dvořák ]
+  * Use default java
+  * nbxdebug belongs to netbeans-php-package
 
+ -- Vítězslav Dvořák <vitex@develoid.jinonice.czf>  Sat, 19 Jan 2019 12:07:26 +0100
