--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+netbeans (11.3.1) UNRELEASED; urgency=medium
+
+  * Non-maintainer upload.
+
+ -- CyberVitexus <vitex@exiv.jinonice.czf>  Sun, 16 Feb 2020 03:30:03 +0100
+
 netbeans (11.1-2) UNRELEASED; urgency=medium
   [ vitex ]
   * Install stable netbeans 11
