--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,10 @@
-netbeans (11.3.1) UNRELEASED; urgency=medium
+netbeans (12.1a) UNRELEASED; urgency=medium
 
-  * Non-maintainer upload.
+  * 11.3 + Upstream Apply
+  * r12.0 
+  * Rebuild
 
- -- CyberVitexus <vitex@exiv.jinonice.czf>  Sun, 16 Feb 2020 03:30:03 +0100
+ -- CyberVitexus <vitex@exiv.jinonice.czf>  Wed, 05 Aug 2020 15:03:34 +0200
 
 netbeans (11.1-2) UNRELEASED; urgency=medium
   [ vitex ]
