--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,12 @@
-netbeans (12.1a) UNRELEASED; urgency=medium
+netbeans (12.2b2) UNRELEASED; urgency=medium
 
   * 11.3 + Upstream Apply
   * r12.0 
   * Rebuild
+  * build again
+  * rebuild
 
- -- CyberVitexus <vitex@exiv.jinonice.czf>  Wed, 05 Aug 2020 15:03:34 +0200
+ -- CyberVitexus <vitex@exiv.jinonice.czf>  Mon, 26 Oct 2020 12:48:15 +0100
 
 netbeans (11.1-2) UNRELEASED; urgency=medium
   [ vitex ]
