--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,13 @@
-netbeans (12.2b3) UNRELEASED; urgency=medium
+netbeans (12.2rc1) UNRELEASED; urgency=medium
 
   * 11.3 + Upstream Apply
   * r12.0 
   * Rebuild
   * build again
   * rebuild
+  
 
- -- CyberVitexus <vitex@exiv.jinonice.czf>  Sat, 07 Nov 2020 02:30:10 +0100
+ -- CyberVitexus <vitex@exiv.jinonice.czf>  Mon, 09 Nov 2020 00:44:08 +0100
 
 netbeans (11.1-2) UNRELEASED; urgency=medium
   [ vitex ]
