--- a/debian/changelog
+++ b/debian/changelog
@@ -1,13 +1,8 @@
-netbeans (12.2rc1) UNRELEASED; urgency=medium
+netbeans (12.2.0) UNRELEASED; urgency=medium
 
-  * 11.3 + Upstream Apply
-  * r12.0 
-  * Rebuild
-  * build again
-  * rebuild
-  
+  * 12.2 build
 
- -- CyberVitexus <vitex@exiv.jinonice.czf>  Mon, 09 Nov 2020 00:44:08 +0100
+ -- CyberVitexus <vitex@exiv.jinonice.czf>  Wed, 09 Dec 2020 06:48:04 +0100
 
 netbeans (11.1-2) UNRELEASED; urgency=medium
   [ vitex ]
