--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-netbeans (12.2.1) UNRELEASED; urgency=medium
+netbeans (12.2.2) UNRELEASED; urgency=medium
 
   * 12.2 build
-  * 
+  * Better PHP8 support
 
- -- CyberVitexus <vitex@exiv.jinonice.czf>  Wed, 09 Dec 2020 06:48:04 +0100
+ -- CyberVitexus <vitex@exiv.jinonice.czf>  Fri, 08 Jan 2021 01:37:13 +0100
 
 netbeans (11.1-2) UNRELEASED; urgency=medium
   [ vitex ]
