--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,10 @@
-netbeans (12.2.2) UNRELEASED; urgency=medium
+netbeans (12.4) UNRELEASED; urgency=medium
 
   * 12.2 build
   * Better PHP8 support
+  * Rebuild
 
- -- CyberVitexus <vitex@exiv.jinonice.czf>  Fri, 08 Jan 2021 01:37:13 +0100
+ -- CyberVitexus <vitex@exiv.jinonice.czf>  Sat, 05 Jun 2021 16:01:47 +0200
 
 netbeans (11.1-2) UNRELEASED; urgency=medium
   [ vitex ]
