--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,14 @@
-netbeans (12.4) UNRELEASED; urgency=medium
+netbeans (12.5) UNRELEASED; urgency=medium
 
+  [ CyberVitexus ]
   * 12.2 build
   * Better PHP8 support
   * Rebuild
 
- -- CyberVitexus <vitex@exiv.jinonice.czf>  Sat, 05 Jun 2021 16:01:47 +0200
+  [ vitex ]
+  * v12.5 release
+
+ -- vitex <info@vitexsoftware.cz>  Tue, 21 Sep 2021 21:48:27 +0200
 
 netbeans (11.1-2) UNRELEASED; urgency=medium
   [ vitex ]
